--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3386310495';
+    var serviceWorkerVersion = '2124483180';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -50,13 +50,13 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "AIzaSyBt6PkguGykxUMoYVSq-PfXX6K5dFBc760",
-    authDomain: "arkdweb-6360f.firebaseapp.com",
-    projectId: "arkdweb-6360f",
-    storageBucket: "arkdweb-6360f.appspot.com",
-    messagingSenderId: "397642393159",
-    appId: "1:397642393159:web:0719baf8a37ed070e17362",
-    measurementId: "G-4KK9WE80M1"
+    apiKey: "AIzaSyAnQkTclDzhCE8NWJEkN0XL6hKOZOR_rrk",
+    authDomain: "ar-kd-44f99.firebaseapp.com",
+    projectId: "ar-kd-44f99",
+    storageBucket: "ar-kd-44f99.appspot.com",
+    messagingSenderId: "863474258753",
+    appId: "1:863474258753:web:8b14faff3cabe0e91f47c0",
+    measurementId: "G-CJ28GKWJ40"
   };
 
   // Initialize Firebase
